# core/planifai-core/src/main/java/com/planifai/core/finance/infrastructure/output/jpa/repository/ExpenseJpaRepository.java
@@ -1,5 +1,6 @@
 package com.planifai.core.finance.infrastructure.output.jpa.repository;
 
+import com.planifai.core.finance.domain.model.ExpenseCategory;
 import com.planifai.core.finance.infrastructure.output.jpa.entity.ExpenseEntity;
 import org.springframework.data.jpa.repository.JpaRepository;
 
@@ -9,4 +10,6 @@ import java.util.List;
 public interface ExpenseJpaRepository extends JpaRepository<ExpenseEntity, Long> {
 
     List<ExpenseEntity> findByExpenseDateBetween(LocalDate from, LocalDate to);
+
+    List<ExpenseEntity> findByCategory(ExpenseCategory category);
 }
